Remove padding to fix offcenter  icons (#!)

--- a/components/header/style.css
+++ b/components/header/style.css
@@ -18,7 +18,6 @@
 	width: 48px;
 	height: 48px;
 	border-radius: 100%;
-	padding-top: 12px;
 }
 
 .icon button a {
